Fixing small viewport spacing issues

--- a/css/index.css
+++ b/css/index.css
@@ -222,8 +222,14 @@ section.gallery {
     .galleryHeader {
       background-size: 175%;
       background-position: 50%;
-      padding-top: 6em;
+      padding-top: 12em;
     }
+    
+  .galleryTitle {
+    font-size: 230%;
+    padding-top: 5em 2em 0 2em;
+  }
+
     /* 100% Image Width on Smaller Screens */
     .modal-content {
       width: 80%;
@@ -235,7 +241,7 @@ section.gallery {
   /* Responsive layout - applies to all screens 600px wide or less.
      - Makes the two columns stack on top of each other instead of next to each other */
   @media screen and (max-width: 600px) {
-    .galleryHeader {
+ /*   .galleryHeader {
       background-size: 190%;
       height: 100%;
       background-position: 50.5% 18%;
@@ -251,15 +257,16 @@ section.gallery {
     .row {
       margin-top: 1em;
     }
-
+*/
     .column {
       -ms-flex: 100%;
       flex: 100%;
       max-width: 80%;
     }
   }
-  @media screen and (max-width: 370px) {
+  @media screen and (max-width: 525px) {
   .galleryHeader {
+    background-color: #131313;
     background-size: 190%;
     height: 100%;
     background-position: 50.5% 18%;
@@ -269,8 +276,7 @@ section.gallery {
 
   .galleryTitle {
     font-size: 230%;
-    padding-top: 2.5em;
-    padding-bottom: 0;
+    padding-top: 2.5em 2em 0 2em;
   }
 }
 
